2.8.1
-----
1. Fix hidding queue.
2. Reduce desktop splitter width to 1px.

2.8.0
-----
 1. Draw multi-disc icon top-left for multi-disc albums, in grid view.
 2. Add 'Remove disc' option to play queue context menu.
 3. When adding a multi-disc album, prompt whether to add all discs or just a
    specific disc.
 4. Replace $FAVURL with item's favourite URL in custom actions.
 5. Add (server side) setting to use comment field as disc title for multi-disc
    albums.
 6. Add 'Play disc starting at track' action for multi-disc albums.
 7. Remove 'more' action if is the same as 'go'
 8. When showing jumplist of (e.g.) 'New Music' show same dots for active and
    inactive, just change colour of active item.
 9. Adjust desktop default pane sizes; queue 30% min-width 400px.
10. Remove 'Open mini-player' buttons from players menu.
11. If screen is 320px or less, then don't show covers in 'Manage players'
    dialog - to give player name more space.
12. Place Spotty's actions from end of album track list into a menu.
13. Update Spotty icon mapping.
14. Add button to control synchronisation to 'Player settings' dialog.
15. Redesign 'Synchronisation' dialog to have a check list.
16. Don't scroll action selector with players list in 'Transfer queue' dialog.
17. Allow pressing 'Toggle queue' button whilst now playing is expanded, or info
    is being shown.
18. Long-press on player in players menu will open 'Synchronisation' dialog.
19. Add sliders to player settings pages.
20. Attempt to add album year to subtoolbar when showing album track listings in
    Spotty.

2.7.3
-----
1. If have entry without an icon don't allow grid usage.
2. Don't play/pause if press 'space' whilst typing to jump to list entry.
3. Correctly handle 'nextWindow' when browsing if no items are returned.
4. Fix icon mapping under 'My Music'
5. Fix 'Play album starting at track' for multi-disc albums.
6. When selecting ranges, treat Ctrl+Select the same as Shift+Select.